--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,10 +17,16 @@ header {
   justify-content: center;
   align-items: center;
   border-bottom: 3px solid LightSeaGreen;
+  color: LightSkyBlue;
 }
 
 h1 {
   font-size: 100px;
+}
+
+h3 {
+  margin: 0;
+  color: skyblue;
 }
 
 p {
@@ -29,10 +35,16 @@ p {
   align-items: center;
 }
 
+a {
+  color: LightSkyBlue;
+  font-size: 20px;
+}
+
 .profile {
-  display: none;
   width: 280px;
   height: 400px;
+  margin: 30px;
+  position: absolute;
 }
 
 .main-block {
@@ -88,31 +100,147 @@ p {
   border: 2px solid aqua;
   background-color: DarkTurquoise;
 }
-.main-block .weather-info {
-  position: absolute;
-  right: 0;
-  padding: 40px;
-  border-left: 3px solid LightSeaGreen;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  width: 600px;
-  height: calc(100% - 200px);
-  background-color: MediumPurple;
-  opacity: 80%;
-  box-sizing: border-box;
+@media (max-width: 4096px) {
+  .main-block .weather-info-wrapper {
+    position: absolute;
+    width: 600px;
+    height: calc(100% - 200px);
+    padding: 40px;
+    border-left: 3px solid LightSeaGreen;
+    background-color: MediumPurple;
+    right: 0;
+    box-sizing: border-box;
+    opacity: 80%;
+  }
+  .main-block .weather-info-wrapper .weather-info {
+    display: grid;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 1fr 1fr;
+  }
+  .main-block .weather-info-wrapper .weather-info .weather-prop {
+    font-size: 30px;
+    font-weight: bold;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper {
+    width: 190px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 20px;
+    gap: 10px;
+    box-sizing: border-box;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper .conversion {
+    margin: 0;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper .conversion:hover {
+    cursor: pointer;
+    color: aqua;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper .conversion:active {
+    color: white;
+  }
 }
-.main-block .weather-info .current-temp {
-  font-size: 30px;
+@media (max-width: 1800px) {
+  .main-block .weather-info-wrapper {
+    position: absolute;
+    width: 450px;
+    height: calc(100% - 200px);
+    padding: 40px;
+    border-left: 3px solid LightSeaGreen;
+    background-color: MediumPurple;
+    right: 0;
+    box-sizing: border-box;
+    opacity: 80%;
+  }
+  .main-block .weather-info-wrapper .weather-info {
+    display: grid;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 1fr 1fr;
+  }
+  .main-block .weather-info-wrapper .weather-info .weather-prop {
+    font-size: 30px;
+    font-weight: bold;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper {
+    width: 190px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 20px;
+    gap: 10px;
+    box-sizing: border-box;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper .conversion {
+    margin: 0;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper .conversion:hover {
+    cursor: pointer;
+    color: aqua;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper .conversion:active {
+    color: white;
+  }
 }
-.main-block .weather-info .feelslike-temp {
-  font-size: 30px;
-}
-.main-block .weather-info .condition-desc {
-  font-size: 30px;
-}
-.main-block .weather-info .humidity {
-  font-size: 30px;
-}
-.main-block .weather-info .wind-speed {
-  font-size: 30px;
+@media (max-width: 1500px) {
+  .main-block .weather-info-wrapper {
+    position: absolute;
+    width: 350px;
+    height: calc(100% - 200px);
+    padding: 40px;
+    border-left: 3px solid LightSeaGreen;
+    background-color: MediumPurple;
+    right: 0;
+    box-sizing: border-box;
+    opacity: 80%;
+  }
+  .main-block .weather-info-wrapper .weather-info {
+    display: grid;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 1fr 1fr;
+  }
+  .main-block .weather-info-wrapper .weather-info .weather-prop {
+    font-size: 30px;
+    font-weight: bold;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper {
+    width: 190px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 20px;
+    gap: 10px;
+    box-sizing: border-box;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper .conversion {
+    margin: 0;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper .conversion:hover {
+    cursor: pointer;
+    color: aqua;
+  }
+  .main-block .weather-info-wrapper .conversion-wrapper .conversion:active {
+    color: white;
+  }
 }
