--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,10 +17,15 @@ header {
   justify-content: center;
   align-items: center;
   border-bottom: 3px solid LightSeaGreen;
+  color: LightSkyBlue;
 }
 
 h1 {
   font-size: 100px;
+}
+h3 {
+    margin: 0;
+    color: skyblue;
 }
 
 p {
@@ -29,10 +34,16 @@ p {
     align-items: center;
 }
 
+a {
+    color: LightSkyBlue;
+    font-size: 20px;
+}
+
 .profile {
-  display: none;
   width: 280px;
   height: 400px;
+  margin: 30px;
+  position: absolute;
 }
 
 .main-block {
@@ -84,32 +95,144 @@ p {
         }
     }
   }
-  .weather-info {
-    position: absolute;
-    right: 0;
-    padding: 40px;
-    border-left: 3px solid LightSeaGreen;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 600px;
-    height: calc(100% - 200px);
-    background-color: MediumPurple;
-    opacity: 80%;
-    box-sizing: border-box;
-    .current-temp {
-        font-size: 30px;
+
+    @media (max-width: 4096px) {
+        .weather-info-wrapper {
+            position: absolute;
+            width: 600px;
+            height: calc(100% - 200px);
+            padding: 40px;
+            border-left: 3px solid LightSeaGreen;
+            background-color: MediumPurple;
+            right: 0;
+            box-sizing: border-box;
+            opacity: 80%;
+            .weather-info {
+                display: grid;
+                align-items: center;
+                width: 100%;
+                height: 100%;
+                grid-template-columns: 1fr 1fr;
+                .weather-prop {
+                    font-size: 30px;
+                    font-weight: bold;
+                }
+            }
+            .conversion-wrapper {
+                width: 190px;
+                position: absolute;
+                top: 0;
+                right: 0;
+                display: flex;
+                flex-direction: column;
+                padding: 15px 20px;
+                gap: 10px;
+                box-sizing: border-box;
+                .conversion {
+                    margin: 0;
+                    user-select: none;
+                    &:hover {
+                        cursor: pointer;
+                        color: aqua;
+                    }
+                    &:active {
+                        color:  white;
+                    }
+                }
+            }
+        }
     }
-    .feelslike-temp {
-        font-size: 30px;
+
+    @media (max-width: 1800px) {
+        .weather-info-wrapper {
+            position: absolute;
+            width: 450px;
+            height: calc(100% - 200px);
+            padding: 40px;
+            border-left: 3px solid LightSeaGreen;
+            background-color: MediumPurple;
+            right: 0;
+            box-sizing: border-box;
+            opacity: 80%;
+            .weather-info {
+                display: grid;
+                align-items: center;
+                width: 100%;
+                height: 100%;
+                grid-template-columns: 1fr 1fr;
+                .weather-prop {
+                    font-size: 30px;
+                    font-weight: bold;
+                }
+            }
+            .conversion-wrapper {
+                width: 190px;
+                position: absolute;
+                top: 0;
+                right: 0;
+                display: flex;
+                flex-direction: column;
+                padding: 15px 20px;
+                gap: 10px;
+                box-sizing: border-box;
+                .conversion {
+                    margin: 0;
+                    user-select: none;
+                    &:hover {
+                        cursor: pointer;
+                        color: aqua;
+                    }
+                    &:active {
+                        color:  white;
+                    }
+                }
+            }
+        }
     }
-    .condition-desc {
-        font-size: 30px;
+    @media (max-width: 1500px) {
+        .weather-info-wrapper {
+            position: absolute;
+            width: 350px;
+            height: calc(100% - 200px);
+            padding: 40px;
+            border-left: 3px solid LightSeaGreen;
+            background-color: MediumPurple;
+            right: 0;
+            box-sizing: border-box;
+            opacity: 80%;
+            .weather-info {
+                display: grid;
+                align-items: center;
+                width: 100%;
+                height: 100%;
+                grid-template-columns: 1fr 1fr;
+                .weather-prop {
+                    font-size: 30px;
+                    font-weight: bold;
+                }
+            }
+            .conversion-wrapper {
+                width: 190px;
+                position: absolute;
+                top: 0;
+                right: 0;
+                display: flex;
+                flex-direction: column;
+                padding: 15px 20px;
+                gap: 10px;
+                box-sizing: border-box;
+                .conversion {
+                    margin: 0;
+                    user-select: none;
+                    &:hover {
+                        cursor: pointer;
+                        color: aqua;
+                    }
+                    &:active {
+                        color:  white;
+                    }
+                }
+            }
+        }
     }
-    .humidity {
-        font-size: 30px;
-    }
-    .wind-speed {
-        font-size: 30px;
-    }
-  }
 }
